style/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

header {
  width: 100%;
}

.logo-bars {
  height: 50px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 20px 0 20px;
}
.nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
header .fa-x {
  display: none;
}
.menu {
  display: none;
}

.nav .show {
  display: block;
  width: 100%;
  position: absolute;
  top: 49px;
  left: 0;
  width: 100%;
  background-color: white;
  z-index: 100;
  text-align: center;
  text-align: center;
}
.nav .menu li {
  list-style: none;
  padding: 5px;
  font-size: 1.2rem;
}
.nav .menu li a {
  text-decoration: none;
  color: grey;
}
.cta {
  width: 150px;
  padding: 7px;
  font-size: 1.2rem;
  color: #fff;
  background: #15803d;
  border: none;
  border-radius: 20px;
}
.hero {
  width: 100%;
  color: #fff;
  text-align: center;
  position: relative;
}
.hero-image {
  width: 100%;
}
.hero-text {
  position: absolute;
  top: 30%;
  left: 5%;
}
.hero h1 {
  font-size: 2rem;
}
.hero p {
  font-size: 1.3rem;
}
.hero .cta {
  margin-top: 10px;
}
/* about section */
h2 {
  text-align: center;
  margin-top: 30px;
  font-size: 1.8rem;
}
.about-image {
  width: 100%;
  margin-top: 20px;
}
.story p {
  width: 90%;
  text-align: center;
  margin: 10px auto 0 auto;
  font-size: 1.1rem;
}
.mission-vision {
  text-align: center;
  margin-top: 20px;
}
.mission-vision button {
  border: none;
  background: #fff;
  font-size: 1.2rem;
  font-weight: 600;
  margin-bottom: 10px;
}
.mission {
  text-decoration: underline;
}
.vision-text {
  display: none;
}
.values {
  text-align: center;
  margin-top: 20px;
}
.values h3 {
  font-size: 1.5rem;
  font-weight: 700;
}
.value-list {
  margin-top: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 20px;
}
.value-list button {
  width: 100px;
  padding: 5px;
  border: none;
  border-radius: 10px;
  color: #fff;
}
.value1 {
  background: #16a34a;
}
.value2 {
  background: #ca8a04;
}
.value3 {
  background: #1e293b;
}
/* Features */
#features {
  margin-top: 30px;
}
.carousel-container {
  position: relative;
  margin-top: 20px;
  max-width: 400px;
  margin: auto;
  overflow: hidden;
}
.carousel-track {
  display: flex;
  transition: transform 0.4s ease-in-out;
}
.carousel-card {
  flex: 0 0 100%;
  padding: 20px;
  background-color: #f8f8f8;
  border-radius: 10px;
}
.carousel-container .fa-solid {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  cursor: pointer;
  z-index: 1;
}
.carousel-container .fa-arrow-right {
  right: 0;
}
.product-image {
  width: 100%;
}
.product-description {
  padding-left: 10px;
}
.product-description h3,
.product-description p {
  margin-top: 10px;
}
.product-description h3 {
  font-size: 1.3rem;
}
.product-description p span {
  font-size: 1.1rem;
  font-weight: 600;
}
/* testimonials */
.testimonial-container {
  margin: auto;
  width: 80%;
  text-align: center;
}
.testimonial-card {
  margin-top: 20px;
  padding: 30px;
  width: 100%;
  background: grey;
}
.testimonial-card > div {
  margin-top: 10px;
  display: flex;
  justify-content: left;
  align-items: center;
  gap: 20px;
}
.testimonial-card img {
  width: 100px;
  height: 100px;
  border-radius: 100px;
}
.testimonial-card h3,
.testimonial-card h4,
.testimonial-card p {
  margin-top: 10px;
}
#chatbot {
  margin-top: 20px;
}
#chatbot h2 {
  /* width: 80%; */
  max-width: 650px;
  margin: -20px -20px 0 -20px;
  background: linear-gradient(to right, #1ba248, #719727, #9e6308);
  border-radius: 10px 10px 0 0;
}
#chat-container {
  width: 80%;
  max-width: 600px;
  margin: auto;
  background: white;
  border: 1px solid #ddd;
  border-radius: 4px;
  padding: 20px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

#messages {
  height: 300px;
  overflow-y: auto;
  border-bottom: 1px solid #ddd;
  margin-bottom: 20px;
  padding: 10px;
}

.message {
  padding: 5px;
  margin: 5px 0;
  border-radius: 4px;
  background: #c7c7c7;
  color: white;
}

.user-message {
  text-align: right;
  background: #16a34a;
  border-radius: 20px;
  color: black;
}

.user-message .message {
  background: #e0f7fa;
}

#chat-input {
  display: flex;
}

#chat-input input {
  flex-grow: 1;
  padding: 10px;
  margin-right: 10px;
  border: 1px solid #ddd;
  border-radius: 20px;
}

#chat-input button {
  padding: 10px 20px;
  background: #16a34a;
  color: white;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

#chat-input button:hover {
  background: #16a34a;
}
/* faqs */
.faq-section {
  width: 80%;
  margin: auto;
}
.faq-item {
  background: rgb(185, 182, 182);
  margin-top: 10px;
  padding: 10px;
}
.faq-question {
  display: flex;
  justify-content: space-between;
}
.faq-answer {
  display: none;
  margin-top: 10px;
}
/* messages */
#contact {
  width: 80%;
  margin: auto;
  margin-bottom: 50px;
}
.contact-form {
  padding: 50px;
  margin-top: 20px;
  border: 1px solid grey;
  border-radius: 30px;
}
.contact-form h3 {
  text-align: center;
  font-size: 1.4rem;
  margin-bottom: 20px;
}
.contact-form label,
.contact-form input,
.contact-form button,
.contact-form textarea {
  display: block;
  margin-top: 10px;
}
.contact-form input {
  width: 250px;
  padding: 10px;
  border-radius: 10px;
  border: 1px solid grey;
}
.contact-form textarea {
  width: 250px;
  height: 100px;
}
.submit {
  width: 250px;
  padding: 5px;
  border: none;
  border-radius: 20px;
  background: linear-gradient(to right, #1ba248, #719727, #9e6308);
}
/* footer */
footer {
  background: #1e293b;
}
.footer-links {
  margin-top: 20px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  text-align: center;
  color: #fff;
}
footer h1,
footer p,
footer h3,
footer a {
  display: block;
  margin-top: 10px;
}
footer a {
  text-decoration: none;
  color: #fff;
}
.counter p {
  width: 200px;
  margin: 10px auto 0 auto;
  border-radius: 20px;
  background: linear-gradient(to right, #1ba248, #719727, #9e6308);
}
.counter {
  margin-bottom: 10px;
}
.copyright {
  text-align: center;
  padding-bottom: 10px;
  color: #fff;
}
@media (min-width: 760px) {
  .logo-bars .fa-bars {
    display: none;
  }
  header {
    display: flex;
    justify-content: space-between;
  }
  .menu {
    width: 100%;
    display: flex;
    align-items: center;
    gap: 50px;
    margin-right: 25px;
  }
  .hero-image {
    height: 100vh;
    object-fit: fill;
  }
  .hero-text {
    top: 40%;
    left: 33%;
  }
  .hero h1 {
    font-size: 3rem;
  }
  .hero p {
    font-size: 1.6rem;
  }
  .hero .cta {
    width: 200px;
    font-size: 1.5rem;
  }
  /* about */
  .our-story {
    width: 80%;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: auto;
  }
  .about-image {
    width: 30%;
  }
  .our-story p {
    text-align: left;
  }
  .mission-vision {
    width: 70%;
    margin: auto;
  }
  /* features */
  .carousel-container {
    max-width: 800px;
  }
  .carousel-card {
    flex: 0 0 49%;
  }
  .carousel-track {
    gap: 10px;
  }
  /* testimonails */
  .testimonial-container {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 30px;
  }
  /* messages */
  #contact {
    width: 40%;
  }
  .contact-form {
    padding-left: 100px;
  }
  /* footer */
  .footer-links {
    flex-direction: row;
    gap: 50px;
  }
}

